; ModuleID = '/home/carl/AnghaBench/redis/deps/linenoise/extr_linenoise.c_linenoiseNoTTY.c'
source_filename = "/home/carl/AnghaBench/redis/deps/linenoise/extr_linenoise.c_linenoiseNoTTY.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4
@EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @linenoiseNoTTY to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @linenoiseNoTTY() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* null, i8** %2, align 8
  store i64 0, i64* %3, align 8
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %0, %64
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %32

11:                                               ; preds = %7
  %12 = load i64, i64* %4, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i64 16, i64* %4, align 8
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i64, i64* %4, align 8
  %17 = mul i64 %16, 2
  store i64 %17, i64* %4, align 8
  %18 = load i8*, i8** %2, align 8
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %2, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i8* @realloc(i8* %19, i64 %20)
  store i8* %21, i8** %2, align 8
  %22 = load i8*, i8** %2, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %15
  %25 = load i8*, i8** %5, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @free(i8* %28)
  br label %30

30:                                               ; preds = %27, %24
  store i8* null, i8** %1, align 8
  br label %65

31:                                               ; preds = %15
  br label %32

32:                                               ; preds = %31, %7
  %33 = load i32, i32* @stdin, align 4
  %34 = call i32 @fgetc(i32 %33)
  store i32 %34, i32* %6, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* @EOF, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %41, label %38

38:                                               ; preds = %32
  %39 = load i32, i32* %6, align 4
  %40 = icmp eq i32 %39, 10
  br i1 %40, label %41, label %56

41:                                               ; preds = %38, %32
  %42 = load i32, i32* %6, align 4
  %43 = load i32, i32* @EOF, align 4
  %44 = icmp eq i32 %42, %43
  br i1 %44, label %45, label %51

45:                                               ; preds = %41
  %46 = load i64, i64* %3, align 8
  %47 = icmp eq i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %45
  %49 = load i8*, i8** %2, align 8
  %50 = call i32 @free(i8* %49)
  store i8* null, i8** %1, align 8
  br label %65

51:                                               ; preds = %45, %41
  %52 = load i8*, i8** %2, align 8
  %53 = load i64, i64* %3, align 8
  %54 = getelementptr inbounds i8, i8* %52, i64 %53
  store i8 0, i8* %54, align 1
  %55 = load i8*, i8** %2, align 8
  store i8* %55, i8** %1, align 8
  br label %65

56:                                               ; preds = %38
  %57 = load i32, i32* %6, align 4
  %58 = trunc i32 %57 to i8
  %59 = load i8*, i8** %2, align 8
  %60 = load i64, i64* %3, align 8
  %61 = getelementptr inbounds i8, i8* %59, i64 %60
  store i8 %58, i8* %61, align 1
  %62 = load i64, i64* %3, align 8
  %63 = add i64 %62, 1
  store i64 %63, i64* %3, align 8
  br label %64

64:                                               ; preds = %56
  br label %7

65:                                               ; preds = %51, %48, %30
  %66 = load i8*, i8** %1, align 8
  ret i8* %66
}

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @fgetc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
